Updated homepage content

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,7 +24,7 @@ main:
   #   url: /year-archive/
     
   - title: "CV"
-    url: https://iris1215.github.io/yinan.li.github.io/files/Yinan_Li_CV.pdf
+    url: https://iris1215.github.io/Iris1215.github.io/files/Yinan_Li_CV.pdf
     
   # - title: "CV"
   #   url: /cv-json/
