--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Yinan Li"
   pronouns         : "she/her"  
-  bio              : "PhD Student in Computer Science"
+  bio              : "PhD Candidate in Computer Science"
   location         : "Tempe, Arizona, USA"
   employer         : "Arizona State University"
   uri              : # URL
